--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body class="bg-gray-100 font-sans">
     <div class="container mx-auto px-4 py-8 max-w-3xl">
-        <h1 class="text-3xl font-bold mb-6 text-center">SLVSH Search</h1>
+        <h1 class="text-3xl font-bold mb-1 text-center">SLVSH INDEX</h1>
+        <p class="text-center mb-1">Find desired tricks from ALL past SLVSH matches!</p>
+        <p class="text-sm text-center mb-6 text-gray-500">This is <u>Beta</u> website: I know many tricks are wrong and missing 🙏</p>
         
         <div class="flex space-x-4">
             <div class="w-1/2 relative flex flex-col">
@@ -33,7 +35,7 @@
             <p class="text-sm text-gray-600">Examples:</p>
             <div class="flex flex-wrap gap-2">
                 <a href="/?tokens=SW&tokens=CORK" class="px-2 py-1 bg-gray-200 text-gray-700 rounded-md text-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50" onclick="setExampleQuery('SW CORK'); return false;">SW CORK</a>
-                <a href="/?tokens=BLENDER&tokens=JOONA" class="px-2 py-1 bg-gray-200 text-gray-700 rounded-md text-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50" onclick="setExampleQuery('BLENDER JOONA'); return false;">BLENDER JOONA</a>
+                <a href="/?tokens=BLENDER&tokens=Ferdinand" class="px-2 py-1 bg-gray-200 text-gray-700 rounded-md text-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50" onclick="setExampleQuery('BLENDER JOONA'); return false;">BLENDER Ferdinand</a>
                 <a href="/?tokens=LIP&exclude=SW" class="px-2 py-1 bg-gray-200 text-gray-700 rounded-md text-sm hover:bg-gray-300 focus:outline-none focus:ring-2 focus:ring-gray-400 focus:ring-opacity-50" onclick="setExampleQuery('LIP', 'SW'); return false;">LIP (without SW)</a>
             </div>
         </div>
